src/objects/Project_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sponsor</fullName>
                </value>
                <value>
                    <fullName>Technical Sponsor</fullName>
                </value>
                <value>
                    <fullName>Customer Project Lead</fullName>
                </value>
                <value>
                    <fullName>MSTR PM</fullName>
                </value>
                <value>
                    <fullName>MSTR PSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Contacts</relationshipLabel>
        <relationshipName>Project_Contacts2</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Contacts</relationshipLabel>
        <relationshipName>Project_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Project Contacts</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Project Contacts Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>